tests/baselines/reference/parserES5ComputedPropertyName9(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserES5ComputedPropertyName9.ts(2,5): error TS2304: Cannot find name 'e'.
parserES5ComputedPropertyName9.ts(2,9): error TS2304: Cannot find name 'Type'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserES5ComputedPropertyName9.ts (2 errors) ====
    class C {
       [e]: Type
        ~
!!! error TS2304: Cannot find name 'e'.
            ~~~~
!!! error TS2304: Cannot find name 'Type'.
    }